# lapEngine

./: CMakeLists.txt  LICENSE.md  README.md
core/: CMakeLists.txt  Makefile
core/include/: app.hpp  components.hpp  core.hpp  eutil.hpp  event.hpp  project.hpp  resource_manager.hpp  scene.hpp  scriptregistry.hpp  systems.hpp
core/include/raylib/: raylib.h  raymath_namespace.h  rlgl.h
core/source/: app.cpp  core.cpp  eutil.cpp  project.cpp  resource_manager.cpp  scene.cpp  systems.cpp
core/source/systems/: gui_sys.cpp  physics_sys.cpp  script_sys.cpp
editor/: CMakeLists.txt  Makefile  gen_header.py  gen_object.py
editor/include/: editor.hpp  objects.hpp  projdata.hpp
editor/include/objects/: addObject.hpp  closeProject.hpp  fileButton.hpp  fileDropdown.hpp  fpslabel.hpp  newProject.hpp  openProject.hpp  saveProject.hpp  sceneButton.hpp  selectionMenu.hpp  sidebar.hpp
editor/source/: addobject.cpp  editor.cpp  fpslabel.cpp  selectionMenu.cpp  sidebar.cpp
editor/source/objects/: addObject.cpp  closeProject.cpp  fileButton.cpp  fileDropdown.cpp  fpslabel.cpp  newProject.cpp  openProject.cpp  saveProject.cpp  sceneButton.cpp  selectionMenu.cpp  sidebar.cpp
examples/flappy_bird/: CMakeLists.txt
examples/flappy_bird/assets/jsons/: project.json
examples/flappy_bird/assets/jsons/objects/: background.json  pipe.json
examples/flappy_bird/assets/jsons/scenes/: main.json
examples/flappy_bird/assets/project/objects/: background.json
examples/flappy_bird/assets/project/scenes/: main.json
examples/flappy_bird/include/: game.hpp
examples/flappy_bird/source/: game.cpp
hub/: CMakeLists.txt  gen_header.py
hub/include/: hub.hpp  projdata.hpp
hub/source/: background.cpp  camera.cpp  createproject.cpp  fpslabel.cpp  hub.cpp  openproject.cpp
include/: app.hpp  components.hpp  eutil.hpp  event.hpp  portable-file-dialogs.h  scene.hpp  scriptregistry.hpp  systems.hpp
include/raylib/: raylib_namespace.h  rlgl_namespace.h
oldprojfiles/assets/: proj.lapengine.json  proj2.lapengine
oldprojfiles/test/: camera.cpp  fpslabel.cpp  maxfpslabel.cpp  projdata.hpp  velocitylabel.cpp
single_include/: lapEngine.hpp
source/: eutil.cpp  project.cpp  resource_manager.cpp  scene.cpp
source/systems/: gui_sys.cpp  input_sys.cpp  render_sys.cpp
